--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "server": "docker compose up --build",
     "sign": "npx --yes @grafana/sign-plugin@latest"
   },
-  "author": "Kenso software",
+  "author": "Kenso Software",
   "license": "Apache-2.0",
   "devDependencies": {
     "@grafana/eslint-config": "^9.0.0",
